# Test_app_trade

./: README.md  pyproject.toml  run_live_entry_test.py  run_live_exit_test.py  tests.py
config/: secrets.yaml  settings.yaml  system_prompt.txt
src/: ai_client.py  execution.py  interfaces.py  main.py  market_data.py  models.py  notifier.py  risk_manager.py  strategy.py
src/adapters/: gmo_broker.py  mock_news.py  offline_broker.py  swap_provider.py  tavily_news.py  vix_provider.py
tests/: test_ai.py  test_gmo_connection.py  test_safety.py  test_strategy.py  test_units.py
