[project]
name = "fx-swap-bot"
version = "1.0.0"
description = "AI-powered FX Swap Arbitrage Bot (Production Safety Edition)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10",
    "openai>=1.50",
    "pandas>=2.2",
    "numpy>=2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tavily-python>=0.3.0"
]

[tool.setuptools]
packages = ["src"]